--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 </head>
 <body>
 
-    <h1>🔗 Quick Navigation Links</h1>
+    <h1>🔗 Test sites</h1>
 
-    <p>Click on any of the links below to visit the corresponding website:</p>
+    <p>The links below are test websites.</p>
 
     <ul>
         <li>
-            <a href="https://www.google.com" target="_blank">Search Engine (Google)</a>
+            <a href="https://songhaoli.github.io/sites/iframe_no_src.html" target="_blank">iframe with no src</a>
         </li>
         <li>
-            <a href="https://www.wikipedia.org" target="_blank">Online Encyclopedia (Wikipedia)</a>
+            <a href="https://songhaoli.github.io/sites/iframe_empty_src.html" target="_blank">iframe with empty src</a>
         </li>
         <li>
-            <a href="https://github.com" target="_blank">Code Repository (GitHub)</a>
+            <a href="https://songhaoli.github.io/sites/iframe_blank_src.html" target="_blank">iframe with blank src</a>
         </li>
     </ul>
 
